# fantasy-hockey

./: .env.example  README.md  pyproject.toml
src/fantasy_hockey/: __init__.py  cli.py  client.py  config.py  models.py  ranking.py
